--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  coucou
-  <!--app-root></app-root-->
-  <div ng-view></div>
+<body ng-controller="MainController">
+  coucou {{toto}}
+  <main></main>
+  <app-root></app-root>
+  <!--div ui-view></div-->
 </body>
 </html>
