--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body ng-controller="MainController">
-  coucou {{toto}}
+<body>
   <main></main>
-  <app-root></app-root>
+  <app></app>
   <!--div ui-view></div-->
 </body>
 </html>
